# OddsAxiome

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.arbengine  Dockerfile.scheduler  Dockerfile.worker  Procfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_odds_snapshots_string_market_id.py  003_user_profile_fields.py
frontend/: .env.example  404.html  App.tsx  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  robots.txt  types.ts  vite.config.ts
frontend/components/: AdminPortal.tsx  AffiliateDashboard.tsx  AlphaDashboard.tsx  AnalyzeModal.tsx  ApiDocs.tsx  AuthModal.tsx  CalculatorModal.tsx  Dashboard.tsx  FeedbackDrawer.tsx  Footer.tsx  HowItWorks.tsx  LandingPage.tsx  Navbar.tsx  OddsCard.tsx  OddsRow.tsx  OrderBookModal.tsx  PriceHistoryModal.tsx  Pricing.tsx  PrivacyPolicy.tsx  ProfilePage.tsx  SearchTool.tsx  Sidebar.tsx  TermsOfService.tsx
frontend/services/: api.ts  firebase.ts  geminiService.ts  marketDataService.ts  mockData.ts
scripts/: create_admin_test_user.py  create_test_users.py  make_admin.py  run_arbengine.py  run_scheduler.py  run_worker.py  seed_platforms.py  seed_tiers.py
src/api/: app.py
src/arbengine/: detector.py  engine.py  matcher.py
src/core/: config.py  database.py  dependencies.py  exceptions.py  redis.py  security.py
src/models/: __init__.py  affiliate.py  arbitrage.py  event.py  market.py  odds.py  subscription.py  user.py
(+39 files in other folders)
