[project]
name = "oddsaxiom-backend"
version = "0.1.0"
description = "OddsAxiom prediction market analytics backend"
requires-python = ">=3.12"

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.9",

    # Redis
    "redis[hiredis]>=5.2.0",

    # Auth
    "firebase-admin>=6.6.0",

    # Payments
    "stripe>=11.0.0",

    # CRM
    "hubspot-api-client>=12.0.0",

    # Data Source SDKs
    "py-clob-client>=0.15.0",
    "kalshi-python>=2.1.0",
    "httpx>=0.28.0",

    # Google AI (Gemini)
    "google-genai>=1.0.0",

    # Data Processing
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "rapidfuzz>=3.10.0",
    "orjson>=3.10.0",

    # Monitoring & Logging
    "structlog>=24.4.0",

    # Scheduling
    "apscheduler>=3.10.4",

    # Utils
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "fakeredis>=2.26.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
